Fixed warning in Chrome for video canvas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,16 +8,16 @@
 
   <title></title>
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="icon" href="images/favicon.png">
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
+  <!-- <link rel="icon" href="images/favicon.png"> -->
 </head>
 
 <body>
 
 	<video id="video" width="640" height="480" autoplay></video>
 	<button id="snap">Snap Photo</button>
-	<canvas id="canvas" width="320" height="200"></canvas>
-  <div id="rawimage">Temp</div>
+	<canvas id="canvas" width="320" height="240"></canvas>
+  <div id="rawimage"></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/scripts.js"></script>
