--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,14 +10,34 @@
 
   <!-- <link rel="stylesheet" href="css/main.css"> -->
   <!-- <link rel="icon" href="images/favicon.png"> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
 
-	<video id="video" width="640" height="480" autoplay></video>
-	<button id="snap">Snap Photo</button>
-	<canvas id="canvas" width="320" height="240"></canvas>
-  <div id="rawimage"></div>
+  <div class="container-fluid">
+
+    <div class="row">
+        <div class="col-sm">
+            <div class="select">
+              <label for="videoSource">Video source: </label><select id="videoSelect"></select>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm">
+            <video id="video" width="100%" autoplay></video>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm">
+            <button id="snap">Snap Photo</button>
+        </div>
+    </div>
+
+  </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/scripts.js"></script>
