--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,23 +17,21 @@
 
   <div class="container-fluid">
 
-    <div class="row">
+    <div class="row mt-2">
         <div class="col-sm">
-            <div class="select">
-              <label for="videoSource">Video source: </label><select id="videoSelect"></select>
-            </div>
+            <select class="custom-select" id="videoSelect" aria-label="Video source"></select>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-sm">
+            <video id="video" width="80%" autoplay></video>
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm">
-            <video id="video" width="100%" autoplay></video>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm">
-            <button id="snap">Snap Photo</button>
+          <button type="button" class="btn btn-primary btn-lg" id="snap">Scan the label</button>
         </div>
     </div>
 
