--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,38 +1,48 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
+    <title></title>
 
-  <!-- <link rel="stylesheet" href="css/main.css"> -->
-  <!-- <link rel="icon" href="images/favicon.png"> -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="icon" href="images/favicon.png"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  </head>
 
-<body>
+  <body>
 
-  <div class="container-fluid">
+    <div class="container-fluid">
 
-    <div class="row mt-2">
-        <div class="col-sm">
-            <select class="custom-select" id="videoSelect" aria-label="Video source"></select>
-        </div>
+      <div class="row mt-2">
+          <div class="col-sm">
+              <select class="custom-select" id="videoSelect" aria-label="Video source"></select>
+          </div>
+      </div>
+
+      <div class="row mt-3">
+          <div class="col-sm">
+              <video id="video" width="80%" autoplay></video>
+          </div>
+      </div>
+
+      <div class="row mt-3">
+          <div class="col-sm">
+              <div class="alert alert-success fade" role="alert" id="alert">
+                Label processed successfully.
+              </div>
+          </div>
+      </div>
+
     </div>
 
-    <div class="row mt-3">
-        <div class="col-sm">
-            <video id="video" width="80%" autoplay></video>
-        </div>
-    </div>
-
-  </div>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="js/scripts.js"></script>
-</body>
+  	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  	<script src="js/scripts.js"></script>
+  </body>
 
 </html>
